--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.prefix=file:src/main/resources/templates/
 spring.thymeleaf.suffix=.html
